# remote-claudecode

./: .gitignore  Cargo.toml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
backend/src/api/: auth.rs  commands.rs  git.rs  mod.rs  projects.rs  remote_servers.rs  settings.rs  user.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/db/: credentials.rs  mod.rs  schema.rs  servers.rs  sessions.rs  users.rs
backend/src/providers/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs
backend/src/remote/: broker_client.rs  deployer.rs  dispatcher.rs  mod.rs  tunnel.rs
backend/src/utils/: mod.rs  projects.rs  pty.rs
backend/src/ws/: chat.rs  mod.rs  protocol.rs  shell.rs  writer.rs
broker/: Cargo.toml  Dockerfile  install.sh
broker/src/: main.rs  protocol.rs  pty.rs  session.rs  updater.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/components/server-selector/: ServerSelector.tsx
frontend/src/components/settings/view/tabs/remote-servers/: RemoteServerForm.tsx  RemoteServersSettingsTab.tsx
frontend/src/contexts/: ServerContext.tsx
shared/: protocol.ts
tests/: run_all_tests.sh  test_backend_api.sh  test_broker_ws.js  test_remote_fuji1.sh
